[package]
name = "pandacss_bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pandacss_config = { workspace = true }
pandacss_tokens = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
