[package]
name = "pandacss_codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
indoc = { workspace = true }
pandacss_config = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
