[package]
name = "pandacss_config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
