[package]
name = "pandacss_config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pandacss_recipes = { workspace = true }
pandacss_shared = { workspace = true }
pandacss_tokens = { workspace = true, features = ["serde"] }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
