[package]
name = "pandacss_encoder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pandacss_extractor = { workspace = true }
pandacss_recipes = { workspace = true }
pandacss_shared = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
