[package]
name = "pandacss_extractor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_parser = { workspace = true }
oxc_resolver = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
pandacss_tokens = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
insta = { workspace = true }
tempfile = "3.13"

[lints]
workspace = true
