[package]
name = "pandacss_recipes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pandacss_extractor = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
