[package]
name = "pandacss_shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
itoa = { workspace = true }
regex = { workspace = true }
ryu = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
