[package]
name = "pandacss_tokens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pandacss_config = { workspace = true }
pandacss_shared = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
pandacss_tokens = { workspace = true, features = ["serde"] }

[features]
serde = ["dep:serde"]

[lints]
workspace = true
