[package]
name = "pandacss_tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
