[package]
name = "pandacss_utility"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pandacss_config = { workspace = true }
pandacss_encoder = { workspace = true }
pandacss_extractor = { workspace = true }
pandacss_shared = { workspace = true }
pandacss_tokens = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
