[package]
name = "project"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
encoder = { workspace = true }
extractor = { workspace = true }
recipes = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
tokens = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
